# dryrun

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.portainer.yml  docker-compose.yml  env.example.toml  justfile  nginx.conf
apps/dryrun-conflux/: Cargo.toml
apps/dryrun-conflux/src/: main.rs  rpc.rs
apps/dryrun-conflux/src/rpc/: error.rs
apps/dryrun-conflux/src/rpc/request/: core_space.rs  mod.rs  native.rs
apps/dryrun-conflux/src/rpc/response/: core_space.rs  mod.rs  native.rs
apps/dryrun-evm/: Cargo.toml  env.example.toml
apps/dryrun-evm/src/: app_config.rs  main.rs
crates/configs/: Cargo.toml
crates/configs/src/: lib.rs
crates/conflux-engine/: Cargo.toml
crates/conflux-engine/src/: config.rs  error.rs  lib.rs  types.rs
crates/conflux-engine/src/core_space/: execution.rs  mod.rs  outcome.rs  transaction.rs
crates/conflux-engine/src/espace/: mod.rs  outcome.rs  transaction.rs
crates/conflux-engine/src/execution/: context.rs  env.rs  mod.rs  params.rs  transaction.rs
crates/conflux-engine/src/native/: outcome.rs  transaction.rs
crates/conflux-engine/src/state/: codec.rs  core_space_internal.rs  http_provider.rs  mod.rs  native_internal.rs  provider.rs  reader.rs  request.rs  rpc_state_key.rs  rpc_types.rs  state_item.rs  state_value_encoding.rs  storage.rs
crates/conflux-service/: Cargo.toml
crates/conflux-service/src/: lib.rs
crates/conflux-service/src/core_space/: mod.rs  types.rs
crates/conflux-service/src/espace/: mod.rs  types.rs
crates/conflux-service/src/native/: types.rs
crates/evm-engine/: Cargo.toml
crates/evm-engine/src/: artifacts.rs  asset_changes.rs  block.rs  chain_spec.rs  change.rs  change_observation.rs  change_observer.rs  engine.rs  error.rs  execution.rs  frames.rs  lib.rs  simulation.rs  trace.rs  transaction.rs  types.rs
crates/evm-engine/src/change_detection/: detectors.rs  log_parsing.rs  mod.rs  tests.rs
crates/evm-engine/src/changes/: candidate.rs  change_metadata.rs  changes.rs  collection.rs  error.rs  event_codec.rs  mod.rs  observation.rs  operator_approval.rs  tests.rs
crates/evm-engine/src/changes/tests/: candidate.rs  erc1155.rs  erc20.rs  erc20_allowance.rs  erc721.rs  metadata.rs  native.rs  support.rs  token_contract.rs  token_state.rs
crates/evm-engine/src/execution/: artifacts.rs  change_extraction.rs  contract_reads.rs  env.rs  fee_settlement.rs  mod.rs  outcome.rs  provider.rs  read_call.rs  token_state_reads.rs
crates/evm-engine/src/transaction_changes/: candidate.rs  change_data.rs  collection.rs  current_changes.rs  current_facts.rs  erc1155.rs  erc20.rs  erc721.rs  error.rs  event_codec.rs  mod.rs  native_balance.rs  operator_approval.rs  positioned_change.rs  tests.rs  token_contract.rs  token_state.rs
crates/evm-engine/src/transaction_changes/tests/: erc1155.rs  erc721.rs  operator_approval.rs
crates/evm-rpc/: Cargo.toml
crates/evm-rpc/src/: errors.rs  handlers.rs
crates/evm-rpc/src/interface/: mod.rs  schema.rs  validation.rs
crates/evm-rpc/src/mapping/: mod.rs  request.rs  response.rs
crates/evm-service/: Cargo.toml
crates/evm-service/src/: error.rs  lib.rs
crates/rpc/: Cargo.toml
crates/rpc-server/: Cargo.toml
crates/rpc-server/src/: errors.rs  handlers.rs  lib.rs  rpc.rs
crates/rpc-server/src/interface/: mod.rs  types.rs  validation.rs
crates/rpc-server/src/mapping/: from_rpc.rs  primitives.rs  to_rpc.rs
crates/rpc/src/: lib.rs
crates/simulation-core/: Cargo.toml
crates/simulation-core/src/: abi.rs  error.rs  evm_simulator.rs  inspector.rs  lib.rs
crates/simulation-service/src/: error.rs  lib.rs  types.rs
crates/simulation-tasks/: Cargo.toml
crates/simulation-tasks/src/: lib.rs  tests.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
dryrun-conflux/: Cargo.toml
dryrun-conflux/crates/conflux-engine/: Cargo.toml
dryrun-conflux/crates/conflux-engine/src/: config.rs  error.rs  lib.rs  simulation.rs  transaction.rs
dryrun-conflux/crates/conflux-engine/src/espace/: execution.rs  mod.rs  outcome.rs  transaction.rs
dryrun-conflux/crates/conflux-engine/src/execution/: context.rs  env.rs  mod.rs  params.rs  transaction.rs
dryrun-conflux/crates/conflux-engine/src/native/: execution.rs  mod.rs  outcome.rs  transaction.rs
dryrun-conflux/crates/conflux-engine/src/state/: codec.rs  http_provider.rs  mod.rs  native_internal.rs  provider.rs  reader.rs  request.rs  rpc_encoding.rs  rpc_types.rs  state_item.rs  state_value_encoding.rs  storage.rs
dryrun-conflux/crates/conflux-service/: Cargo.toml
dryrun-conflux/crates/conflux-service/src/: lib.rs
dryrun-conflux/crates/conflux-service/src/espace/: mod.rs  types.rs
dryrun-conflux/crates/conflux-service/src/native/: mod.rs  types.rs
dryrun-conflux/src/: health.rs  main.rs  rpc.rs
dryrun-conflux/src/rpc/: error.rs  request.rs  response.rs
dryrun-conflux/src/rpc/request/: espace.rs  mod.rs  native.rs  shared.rs
dryrun-conflux/src/rpc/response/: espace.rs  mod.rs  native.rs
dryrun-evm/: Cargo.toml
dryrun-evm/crates/evm-engine/src/: chain_spec.rs  change.rs  lib.rs  transaction.rs
dryrun-evm/crates/evm-engine/src/change_detection/: log_parsing.rs  mod.rs
dryrun-evm/crates/rpc-server/src/: errors.rs  handlers.rs
dryrun-evm/crates/rpc-server/src/mapping/: mod.rs  (+5 more)
dryrun-evm/crates/simulation-service/: Cargo.toml
services/dryrun-conflux/: Cargo.toml
services/dryrun-conflux/crates/conflux-engine/: Cargo.toml
services/dryrun-conflux/crates/conflux-engine/src/state/: mod.rs  provider.rs
services/dryrun-conflux/src/: main.rs
web/: .env.example  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  queryClient.ts
web/src/lib/: formatting.ts
web/src/simulation/: SimulationPage.tsx  changeView.ts  client.ts  defaults.ts  form.ts  requestCodec.ts  rpc.ts  types.ts  useSimulationPage.ts
web/src/simulation/components/: SimulationComposer.tsx  SimulationHeader.tsx  SimulationHistory.tsx  SimulationResults.tsx
web/src/ui/: Badge.tsx  Button.tsx  LabeledField.tsx  MetricCard.tsx  Panel.tsx  fieldStyles.ts
(+6 files in other folders)
