[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "bin",
    "crates/simulation-core",
    "crates/rpc-server",
    "crates/types",
    "crates/configs",
]

[workspace.dependencies]
rpc-server = { path = "crates/rpc-server" }
simulation-core = { path = "crates/simulation-core" }
types = { path = "crates/types" }
configs = { path = "crates/configs" }

jsonrpsee = "0.25.1"
anyhow = "1"
thiserror = "2"

futures = "0.3"
dashmap = { version = "7.0.0-rc2" }
reqwest = { version = "0.12", features = ["json"] }
tokio = "1"
tokio-test = "0.4"

alloy = { version = "1.0.1", features = ["full"] }
revm = "26.0.1"

serde = "1.0"
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.14.0"

config = "0.15"
