[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "bin",
    "crates/evm-engine",
    "crates/rpc-server",
    "crates/simulation-service",
]

[workspace.dependencies]
evm-engine = { path = "crates/evm-engine" }
rpc-server = { path = "crates/rpc-server" }
simulation-service = { path = "crates/simulation-service" }

jsonrpsee = "0.26"
thiserror = "2"

futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = "1"

alloy = { version = "1", features = ["full"] }
alloy-primitives = "1"
revm = "36"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

config = "0.15"

metrics = "0.24"
metrics-exporter-prometheus = "0.18"
axum = "0.8"
