[workspace]
resolver = "3"
members = ["crates/conflux-engine"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
alloy = { version = "1", features = ["full"] }
axum = "0.8"
conflux-engine = { path = "crates/conflux-engine" }
jsonrpsee = "0.26"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[package]
name = "dryrun-conflux"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
axum = { workspace = true }
conflux-engine = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
