[workspace]
resolver = "3"
members = ["crates/conflux-engine", "crates/conflux-service"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
alloy = { version = "1", features = ["full"] }
async-trait = "0.1"
axum = "0.8"
conflux-engine = { path = "crates/conflux-engine" }
conflux-service = { path = "crates/conflux-service" }
cfx-types = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-bytes = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-addr = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-rpc-cfx-types = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-rpc-primitives = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-rpc-eth-types = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
jsonrpsee = "0.26"
primitives = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
thiserror = "2"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[package]
name = "dryrun-conflux"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
axum = { workspace = true }
cfx-addr = { workspace = true }
cfx-bytes = { workspace = true }
cfx-rpc-cfx-types = { workspace = true }
cfx-rpc-eth-types = { workspace = true }
cfx-rpc-primitives = { workspace = true }
cfx-types = { workspace = true }
conflux-engine = { workspace = true }
conflux-service = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
hex = "0.4"
