[package]
name = "dryrun"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
evm-engine = { workspace = true }
evm-rpc = { workspace = true }
evm-service = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
metrics-exporter-prometheus = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
