[package]
name = "conflux-engine"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
cfx-types = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
primitives = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-storage = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-statedb = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }

cfx-internal-common = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
tracing = { workspace = true }

thiserror = { workspace = true }
alloy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

rlp = "0.6"
keccak-hash = "0.12"
