[package]
name = "conflux-service"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
cfx-types = { workspace = true }
conflux-engine = { workspace = true }
primitives = { workspace = true }
simulation-tasks = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
