[package]
name = "evm-engine"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
alloy-chains = { workspace = true }
alloy-hardforks = { workspace = true }
alloy-primitives = { workspace = true }
revm = { workspace = true, features = [
    "alloydb",
    "optional_balance_check",
    "optional_fee_charge",
    "optional_no_base_fee",
] }
thiserror = { workspace = true }
