[package]
name = "evm-rpc"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
jsonrpsee = { workspace = true, features = ["server", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
alloy = { workspace = true }
evm-service = { workspace = true }
