[package]
name = "rpc-server"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
jsonrpsee = { workspace = true, features = ["server", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
alloy-primitives = { workspace = true }
