[package]
name = "simulation-core"
version.workspace = true
edition.workspace = true

[dependencies]
revm = { workspace = true, features = ["alloydb"] }
alloy = { workspace = true }
types = { workspace = true }
configs = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }