[workspace]
resolver = "3"
members = ["crates/conflux-engine"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
conflux-engine = { path = "crates/conflux-engine" }
jsonrpsee = "0.26"
serde_json = "1"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[package]
name = "dryrun-conflux"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
conflux-engine = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
