[package]
name = "conflux-engine"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy = { workspace = true }
cfx-types = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
primitives = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-storage = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-statedb = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-internal-common = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-parameters = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }

keccak-hash = "0.12"
rlp = "0.6"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
