[package]
name = "conflux-engine"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
jsonrpsee = { workspace = true, features = ["http-client"] }
hex = "0.4"
cfx-types = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
primitives = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-storage = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-statedb = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-internal-common = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-parameters = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-addr = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }

cfx-execute-helper = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-executor = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-vm-types = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }

cfx-rpc-cfx-types = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }

keccak-hash = "0.5"
rlp = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
