[package]
name = "conflux-engine"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
async-trait = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client"] }
hex = "0.4"
cfx-bytes = { workspace = true }
cfx-types = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
primitives = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-storage = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-statedb = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-internal-common = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-parameters = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-addr = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }

cfx-executor = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-vm-types = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }

cfx-rpc-cfx-types = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
cfx-rpc-primitives = { workspace = true }

cfx-rpc-eth-types = { git = "https://github.com/iosh/conflux-rust.git", branch = "dry" }
keccak-hash = "0.5"
rlp = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tracing = { workspace = true }
